# epistemic-cascade-validator

./: README.md  app.py  main.py  pyproject.toml  validate_autoresearch.py  validate_real_data.py
ecv/: __init__.py  cascade.py  comparison.py  confidence.py  decision.py  visualization.py
ecv/adapters/: __init__.py  ara.py  base.py  evaluator.py  karpathy.py  vanilla.py
output/: karpathy_validation.json  real_data_validation.json  results.json
