[project]
name = "epistemic-cascade-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]
